examples/test/testpolicy8480.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8480
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key46: value39
      key2: value31
      key45: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value37
          key48: value33
      podSelector:
        matchLabels:
          key35: value40
          key47: value32
          key6: value38
